mrt_assignment_2/mrt_ws/log/build_2023-12-19_18-56-35/suketupatni_assn_2/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/suketupatni/Desktop/mrt_assignment_2/mrt_ws/install/suketupatni_assn_2/lib/python3.10/site-packages/suketupatni_assn_2/d_rover3.py", line 26
    self.get_logger().info(f"DaughterRover3 Mission Status: ({mission_status.data)")
                                                                                   ^
SyntaxError: f-string: unmatched ')'

